update swagger tags
